--- a/src/index.html
+++ b/src/index.html
@@ -117,9 +117,11 @@
       </div>
 
       <div class="calculate">
-        расчитать <br> 
-        стоимость  <br>
-        станка
+        <a href="calculate-form.html">
+          расчитать <br> 
+          стоимость  <br>
+          станка
+        </a>
       </div>
 
       <div class="help-block">
@@ -136,18 +138,18 @@
       <div class="container">
         <h2 class="leasing__title">ЛУЧШИЙ <span>ЛИЗИНГ</span> ДЛЯ ВАС</h2>
         <div class="leasing__inner">
-          <div class="leasing__item"><a href="#" class="leasing__link">
+          <div class="leasing__item">
             <img src="img/bank1.jpg" height="84" width="293" alt="" class="leasing__img">
-          </a></div>
-          <div class="leasing__item"><a href="#" class="leasing__link">
+          </div>
+          <div class="leasing__item">
             <img src="img/bank2.jpg" height="84" width="230"  alt="" class="leasing__img">
-          </a></div>
-          <div class="leasing__item"><a href="#" class="leasing__link">
+          </div>
+          <div class="leasing__item">
             <img src="img/bank3.jpg" height="84" width="223"  alt="" class="leasing__img">
-          </a></div>
-          <div class="leasing__item"><a href="#" class="leasing__link">
+          </div>
+          <div class="leasing__item">
             <img src="img/bank4.jpg" height="84" width="256"  alt="" class="leasing__img">
-          </a></div>
+          </div>
         </div>
       </div>
     </div>
