--- a/src/news-item.html
+++ b/src/news-item.html
@@ -14,6 +14,16 @@
   //=include partials/header.html
 
   <main class="main main_inner-page">
+    <div class="container breadcrumbs-container">
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Р-Гарнет</a></li>
+
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Каталог</a></li>
+
+        <li class="breadcrumbs__item"><span class="breadcrumbs__active">Новости</span></li>
+      </ul>
+    </div>
+    
     <div class="container">
       <h1><a href="#" class="come-back-link">Назад к списку новостей</a>Новости</h1>
 
@@ -25,7 +35,7 @@
 
           <div class="col-md-9 col-sm-8 news__content">
             <div class="news__head">
-              <h2 class="news__title"><a href="#">Выставка Blechexpo - 2015</a></h2>
+              <h2 class="news__title"><span>Выставка Blechexpo - 2015</span></h2>
             </div>
 
             <div class="news_body">
