--- a/src/about.html
+++ b/src/about.html
@@ -15,6 +15,16 @@
   //=include partials/header.html
 
   <main class="main main_inner-page">
+    <div class="container breadcrumbs-container">
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Р-Гарнет</a></li>
+
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Каталог</a></li>
+
+        <li class="breadcrumbs__item"><span class="breadcrumbs__active">О компании</span></li>
+      </ul>
+    </div>
+
     <div class="container">
       <h1>о компании</h1>
       <h2 class="text-center">Почему предприятия начинают работать с нами?</h2>
@@ -61,27 +71,27 @@
       </section>
 
       <aside class="about-slider js-about-slider">
-        <div class="about-slider__item"><a href="#" class="about-slider__link">
+        <div class="about-slider__item"><a href="#" data-target="#lightboxModal" data-toggle="modal" data-img="img/slider-1.jpg" class="about-slider__link">
           <img src="img/slider-1.jpg" alt="слайд">
         </a></div>
 
-        <div class="about-slider__item"><a href="#" class="about-slider__link">
+        <div class="about-slider__item"><a href="#" data-target="#lightboxModal" data-toggle="modal" data-img="img/slider-3.jpg" class="about-slider__link">
           <img src="img/slider-3.jpg" alt="слайд">
         </a></div>
 
-        <div class="about-slider__item"><a href="#" class="about-slider__link">
+        <div class="about-slider__item"><a href="#" data-target="#lightboxModal" data-toggle="modal" data-img="img/slider-2.jpg" class="about-slider__link">
           <img src="img/slider-2.jpg" alt="слайд">
         </a></div>
 
-        <div class="about-slider__item"><a href="#" class="about-slider__link">
+        <div class="about-slider__item"><a href="#" data-target="#lightboxModal" data-toggle="modal" data-img="img/slider-1.jpg" class="about-slider__link">
           <img src="img/slider-1.jpg" alt="слайд">
         </a></div>
 
-        <div class="about-slider__item"><a href="#" class="about-slider__link">
+        <div class="about-slider__item"><a href="#" data-target="#lightboxModal" data-toggle="modal" data-img="img/slider-3.jpg" class="about-slider__link">
           <img src="img/slider-3.jpg" alt="слайд">
         </a></div>
 
-        <div class="about-slider__item"><a href="#" class="about-slider__link">
+        <div class="about-slider__item"><a href="#" data-target="#lightboxModal" data-toggle="modal" data-img="img/slider-2.jpg" class="about-slider__link">
           <img src="img/slider-2.jpg" alt="слайд">
         </a></div>
       </aside>
