--- a/src/contact.html
+++ b/src/contact.html
@@ -22,7 +22,46 @@
     <div class="container">
       
       <div class="row">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-sm-8 col-sm-push-4">
+          <h1>Контакты</h1>
+          <div class="panel-group panel-group_contact" >
+            <div class="panel panel-default">
+              <div class="panel-heading" >
+                <h4 class="panel-title">
+                    Центральный офис-склад: 
+                </h4>
+              </div>
+              <div id="contact-1" class="panel-collapse collapse in" >
+                <div class="panel-body">
+                  <dl class="row">
+                    <dt class="col-md-5">Адрес:</dt>
+                    <dd class="col-md-7">г. Санкт-Петербург, пер. Челиева, д. 13, лит. Т, к. 3.</dd>
+                  </dl>
+                  <dl class="row">
+                    <dt class="col-md-5">Время работы:</dt>
+                    <dd class="col-md-7">123456</dd>
+                  </dl>
+                  <dl class="row">
+                    <dt class="col-md-5">Электронная почта:</dt>
+                    <dd class="col-md-7"><a href="mailto:info@r-garnet.ru">info@r-garnet.ru</a></dd>
+                  </dl>
+                  <dl class="row">
+                    <dt class="col-md-5">Телефон:</dt>
+                    <dd class="col-md-7"><a href="tel:78127031264">+7 (812) 703 12 64</a></dd>
+                  </dl>
+                  <dl class="row">
+                    <dt class="col-md-5">Факс:</dt>
+                    <dd class="col-md-7">+7 (812) 703 12 64</dd>
+                  </dl>
+                  <a href="#schemaMap" data-toggle="modal" data-target="#schemaMap" data-lat="59.889708" data-lang="30.478156" class="drive-schecma">Схема проезда</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-sm-4 col-sm-pull-8">
           <form class="form-contact">
             <h2>Обратная связь:</h2>
             <div class="form-group">
@@ -57,44 +96,7 @@
           </form>
         </div>
 
-        <div class="col-md-8 col-sm-8">
-          <h1>Контакты</h1>
-          <div class="panel-group panel-group_contact" >
-            <div class="panel panel-default">
-              <div class="panel-heading" >
-                <h4 class="panel-title">
-                    Центральный офис-склад: 
-                </h4>
-              </div>
-              <div id="contact-1" class="panel-collapse collapse in" >
-                <div class="panel-body">
-                  <dl class="row">
-                    <dt class="col-md-5">Адрес:</dt>
-                    <dd class="col-md-7">г. Санкт-Петербург, пер. Челиева, д. 13, лит. Т, к. 3.</dd>
-                  </dl>
-                  <dl class="row">
-                    <dt class="col-md-5">Время работы:</dt>
-                    <dd class="col-md-7">123456</dd>
-                  </dl>
-                  <dl class="row">
-                    <dt class="col-md-5">Электронная почта:</dt>
-                    <dd class="col-md-7">info@r-garnet.ru</dd>
-                  </dl>
-                  <dl class="row">
-                    <dt class="col-md-5">Телефон:</dt>
-                    <dd class="col-md-7">+7 (812) 703 12 64</dd>
-                  </dl>
-                  <dl class="row">
-                    <dt class="col-md-5">Факс:</dt>
-                    <dd class="col-md-7">+7 (812) 703 12 64</dd>
-                  </dl>
-                  <a href="#" class="drive-schecma">Схема проезда</a>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
+        
       </div>
     </div>
   </main>
