--- a/src/news.html
+++ b/src/news.html
@@ -15,6 +15,16 @@
   //=include partials/header.html
 
   <main class="main main_inner-page">
+    <div class="container breadcrumbs-container">
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Р-Гарнет</a></li>
+
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Каталог</a></li>
+
+        <li class="breadcrumbs__item"><span class="breadcrumbs__active">Новости</span></li>
+      </ul>
+    </div>
+
     <div class="container">
       <h1>Новости</h1>
 
