--- a/src/article.html
+++ b/src/article.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html>
 <head>
   <meta charset="utf-8">
   <title>Р-Гарнет</title>
@@ -13,21 +13,20 @@
 <!-- BEGIN  out-->
 <div class="out">
   //=include partials/header.html
-
+  
   <main class="main main_inner-page">
-
     <div class="container breadcrumbs-container">
       <ul class="breadcrumbs">
         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Р-Гарнет</a></li>
-
-        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Каталог</a></li>
-
-        <li class="breadcrumbs__item"><span class="breadcrumbs__active">Cтатьи </span></li>
+        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Cтатьи</a></li>
+        <li class="breadcrumbs__item"><span class="breadcrumbs__active">Техника безопасности</span></li>
       </ul>
     </div>
-
     <div class="container">
-      <h1><a href="#" class="come-back-link">Назад к списку статей</a>Cтатьи</h1>
+      <h1>
+        <a href="#" class="come-back-link">Назад к списку статей</a>
+        <span class="inner-title">Техника безопасности</span>
+      </h1>
 
       <article class="news-wrap">
         <article class="row news">
@@ -36,10 +35,6 @@
           </div>
 
           <div class="col-md-9 col-sm-8 news__content">
-            <div class="news__head">
-              <h2 class="news__title"><span>Техника безопасности</span></h2>
-            </div>
-
             <div class="news_body">
               С 3 по 6 ноября в Landesmesse Stuttgart(Штудгард, Германия) состоятся 12-я международная специализированная выставка "Blechexpo - 2015". Компания Р-Гарнет совместно с GmD GmbH приглашает Вас посетить наш стенд(зал №5, стенд №5005). На стенде будет проходить демонстрация возможностей станка гидроабразивной резки "R-GAR"
               <div class="news__date">01.10.2015</div>
@@ -51,6 +46,8 @@
   </main>
   
   //=include partials/footer.html
+  
+  
 </div>
 <!-- END out-->
 <script src="//api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
