--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,11 @@
         <h2>Р-гарнет - только лучшее оборудование для Вашего производства</h2>
 
         <p>ЗАО «Р-Гарнет» создано в 2005 году на базе группы компаний «Росмарк», ведущего российского поставщика оборудования для металлообработки. Мы начали с поставок гранатового абразива, в 2008 году расширили ассортимент до основных расходных материалов станков всех марок и, наконец, в 2014 году мы запустили производство станков под собственным брендом «RGAR». Данное оборудование отвечает всем современным мировым стандартам безопасности, производство сертифицировано в соответствии со стандартами системы менеджмента качества ИСО 9001.</p>
-
+        <div id="rgarnetHidden" class="panel-collapse collapse" role="tabpanel" aria-expanded="true">
+          <p>ЗАО «Р-Гарнет» создано в 2005 году на базе группы компаний «Росмарк», ведущего российского поставщика оборудования для металлообработки. Мы начали с поставок гранатового абразива, в 2008 году расширили ассортимент до основных расходных материалов станков всех марок и, наконец, в 2014 году мы запустили производство станков под собственным брендом «RGAR». Данное оборудование отвечает всем современным мировым стандартам безопасности, производство сертифицировано в соответствии со стандартами системы менеджмента качества ИСО 9001.</p>
+        </div>
         <div class="l-section__action">
-          <a href="#" class="btn btn-default">Подробнее</a>          
+          <a href="#rgarnetHidden" data-toggle="collapse"  aria-expanded="true" aria-controls="rgarnetHidden" class="btn btn-default">Подробнее</a>          
         </div>
       </section>
 
