--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,12 @@
   //=include partials/header.html
   <aside class="main-promo-banner">
     <div class="main-promo-banner__text">ЗАО "Р-ГАРНЕТ" - СТАНКИ ДЛЯ ГИДРОАБРАЗИВНОЙ РЕЗКИ</div>
-    <img src="img/banner.jpg" class="main-promo-banner__img" alt="баннер"> 
+    <div class="main-promo-banner__video">
+      <div class="main-promo-banner__video-inner">
+        <iframe src="https://www.youtube.com/embed/3Ls0V0q2Pf0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=3Ls0V0q2Pf0" frameborder="0" allowfullscreen></iframe>
+        <div class="main-promo-banner__video-cover"></div>
+      </div>
+    </div>
   </aside>
 
   <main class="main">
@@ -28,7 +33,7 @@
           <p>ЗАО «Р-Гарнет» создано в 2005 году на базе группы компаний «Росмарк», ведущего российского поставщика оборудования для металлообработки. Мы начали с поставок гранатового абразива, в 2008 году расширили ассортимент до основных расходных материалов станков всех марок и, наконец, в 2014 году мы запустили производство станков под собственным брендом «RGAR». Данное оборудование отвечает всем современным мировым стандартам безопасности, производство сертифицировано в соответствии со стандартами системы менеджмента качества ИСО 9001.</p>
         </div>
         <div class="l-section__action">
-          <a href="#rgarnetHidden" data-toggle="collapse"  aria-expanded="true" aria-controls="rgarnetHidden" class="btn btn-default">Подробнее</a>          
+          <a href="#rgarnetHidden" data-toggle="collapse"  aria-expanded="true" aria-controls="rgarnetHidden" class="btn btn-default">Подробнее</a>
         </div>
       </section>
 
@@ -36,7 +41,7 @@
         <div class="row">
           <div class="col-md-4 base-info-card base-info-card_column">
             <div class="base-info-card__img">
-              <img src="img/choice-1.jpg" alt="НАДЕЖНОСТЬ И ДОСТУПНОСТЬ">              
+              <img src="img/choice-1.jpg" alt="НАДЕЖНОСТЬ И ДОСТУПНОСТЬ">
             </div>
             <div class="base-info-card__img-title">НАДЕЖНОСТЬ И ДОСТУПНОСТЬ</div>
             <div class="base-info-card__text">
@@ -50,7 +55,7 @@
 
           <div class="col-md-4 base-info-card base-info-card_column">
             <div class="base-info-card__img">
-              <img src="img/choice-2.jpg" alt="ОТВЕТСТВЕННОСТЬ">              
+              <img src="img/choice-2.jpg" alt="ОТВЕТСТВЕННОСТЬ">
             </div>
 
             <div class="base-info-card__img-title">ОТВЕТСТВЕННОСТЬ</div>
@@ -64,10 +69,10 @@
 
           <div class="col-md-4 base-info-card base-info-card_column">
             <div class="base-info-card__img">
-              <img src="img/choice-3.jpg" alt="ЦЕЛЕСООБРАЗНОСТЬ">  
+              <img src="img/choice-3.jpg" alt="ЦЕЛЕСООБРАЗНОСТЬ">
             </div>
 
-            <div class="base-info-card__img-title">ЦЕЛЕСООБРАЗНОСТЬ</div>            
+            <div class="base-info-card__img-title">ЦЕЛЕСООБРАЗНОСТЬ</div>
 
             <div class="base-info-card__text">
               <p>Благодаря комплексному подходу
@@ -92,10 +97,10 @@
               </div>
               <div class="goods-machine__content">
                 <h3 class="goods-machine__title"><a href="">Новые станки в наличии</a></h3>
-                <div class="goods-machine__describe">С 23 по 27 мая  в ЦВК «Экспоцентр» (Москва, Красфнопресненская наб., 14) состоится 17 международная специализированная выставка "Оборудование, приборы и инструменты для металлообрабатывающей промышленности" - "Металлообработка-2016", являющаяся крупнейшим проектом в России и СНГ в области станкостроения. 
+                <div class="goods-machine__describe">С 23 по 27 мая  в ЦВК «Экспоцентр» (Москва, Красфнопресненская наб., 14) состоится 17 международная специализированная выставка "Оборудование, приборы и инструменты для металлообрабатывающей промышленности" - "Металлообработка-2016", являющаяся крупнейшим проектом в России и СНГ в области станкостроения.
                 ЗАО «Р-Гарнет», более 11 лет занимающееся поставками гранатового песка и запасных частей для станков гидроабразивной резки, приглашает Вас и специалистов Вашего предприятия посетить наш стенд: №4В-06
                 На стенде ЗАО "Р-Гарнет" будет проходить официальная презентация станка гидроабразивной резки под собственным брендом "R-GAR"</div>
-                <div class="goods-machine__action"><a href="#">подробнее</a></div> 
+                <div class="goods-machine__action"><a href="#">подробнее</a></div>
               </div>
             </div>
           </div>
@@ -107,10 +112,10 @@
               </div>
               <div class="goods-machine__content">
                 <h3 class="goods-machine__title"><a href="">Новые станки в наличии</a></h3>
-                <div class="goods-machine__describe">С 23 по 27 мая  в ЦВК «Экспоцентр» (Москва, Красфнопресненская наб., 14) состоится 17 международная специализированная выставка "Оборудование, приборы и инструменты для металлообрабатывающей промышленности" - "Металлообработка-2016", являющаяся крупнейшим проектом в России и СНГ в области станкостроения. 
+                <div class="goods-machine__describe">С 23 по 27 мая  в ЦВК «Экспоцентр» (Москва, Красфнопресненская наб., 14) состоится 17 международная специализированная выставка "Оборудование, приборы и инструменты для металлообрабатывающей промышленности" - "Металлообработка-2016", являющаяся крупнейшим проектом в России и СНГ в области станкостроения.
                 ЗАО «Р-Гарнет», более 11 лет занимающееся поставками гранатового песка и запасных частей для станков гидроабразивной резки, приглашает Вас и специалистов Вашего предприятия посетить наш стенд: №4В-06
                 На стенде ЗАО "Р-Гарнет" будет проходить официальная презентация станка гидроабразивной резки под собственным брендом "R-GAR"</div>
-                <div class="goods-machine__action"><a href="#">подробнее</a></div> 
+                <div class="goods-machine__action"><a href="#">подробнее</a></div>
               </div>
             </div>
           </div>
@@ -120,7 +125,7 @@
 
       <div class="calculate">
         <a href="calculate-form.html">
-          расчитать <br> 
+          расчитать <br>
           стоимость  <br>
           станка
         </a>
@@ -134,7 +139,7 @@
           <button class="btn btn-ques">Отправить заявку</button>
         </div>
       </div>
-    </div>  
+    </div>
 
     <div class="leasing">
       <div class="container">
@@ -159,9 +164,9 @@
     <div class="go-top">
       <a href="#header" id="top-go" class="toUp"></a>
     </div>
-    
+
   </main>
-  
+
   //=include partials/footer.html
 </div>
 <!-- END out-->
