--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="main-promo-banner__text">ЗАО "Р-ГАРНЕТ" - СТАНКИ ДЛЯ ГИДРОАБРАЗИВНОЙ РЕЗКИ</div>
     <div class="main-promo-banner__video">
       <div class="main-promo-banner__video-inner">
-        <iframe src="https://www.youtube.com/embed/3Ls0V0q2Pf0?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=3Ls0V0q2Pf0" frameborder="0" allowfullscreen></iframe>
+        <video id="promoVideo" src="./videos/main_promo.mp4" autobuffer autoplay="autoplay" loop="loop" preload="auto"></video>
         <div class="main-promo-banner__video-cover"></div>
       </div>
     </div>
